WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42344
[Chromium] fix compilation failure in AutoFillPopupMenuClient.cpp
https://bugs.webkit.org/show_bug.cgi?id=42344
Summary
[Chromium] fix compilation failure in AutoFillPopupMenuClient.cpp
Pavel Podivilov
Reported
2010-07-15 02:20:42 PDT
[Chromium] fix chromium mac compilation failure in AutoFillPopupMenuClient.cpp
Attachments
Proposed patch.
(1.75 KB, patch)
2010-07-15 02:33 PDT
,
Pavel Podivilov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Podivilov
Comment 1
2010-07-15 02:33:23 PDT
Created
attachment 61622
[details]
Proposed patch.
Yury Semikhatsky
Comment 2
2010-07-15 02:45:52 PDT
Comment on
attachment 61622
[details]
Proposed patch. Clearing flags on attachment: 61622 Committed
r63418
: <
http://trac.webkit.org/changeset/63418
>
Yury Semikhatsky
Comment 3
2010-07-15 02:46:01 PDT
All reviewed patches have been landed. Closing bug.
Scott Violet
Comment 4
2010-07-15 08:39:07 PDT
Sorry I missed this. Do we compile in chrome with a different set of flags that lead to me missing this?
Pavel Podivilov
Comment 5
2010-07-15 08:43:32 PDT
Yes, in chromium-mac warnings are errors (at least comparison signed/unsigned mismatches).
Yury Semikhatsky
Comment 6
2010-07-15 08:46:43 PDT
(In reply to
comment #4
)
> Sorry I missed this. Do we compile in chrome with a different set of flags that lead to me missing this?
I think the flags are a bit different. Moreover, IIRC they differ on different platform for Chromium.
Scott Violet
Comment 7
2010-07-15 08:54:37 PDT
I compiled on linux which apparently must disable warnings as well. I'll be more careful next time. Sorry.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug