2010-07-15  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Yury Semikhatsky.

        Fix mac compilation failure
        https://bugs.webkit.org/show_bug.cgi?id=42344

        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::removeSuggestionAtIndex):
        (WebKit::AutoFillPopupMenuClient::canRemoveSuggestionAtIndex):

Canonical link: https://commits.webkit.org/54266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63418 268f45cc-cd09-0410-ab3c-d52691b4dbfc